external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_with_idents.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_with_idents.move:3:24
  │
3 │     public struct Foo(x: u64) has copy, drop;
  │                      - ^ Expected ')'
  │                      │  
  │                      To match this '('

